maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:58: error: type mismatch;
 found   : Unit
 required: Boolean
  if (!estFaceMur())
  ^